# rci_pb_msgs

./: AttentionMessage.proto  BeaconSignal.proto  BenchmarkControl.proto  BenchmarkState.proto  Inventory.proto  LoggingStatus.proto  Order.proto  README.md  Time.proto  TransportationTask.proto
etc/buildsys/: config.mk  genpkgconfig.mk  protobuf.mk  protobuf_msgs.mk  rules.mk
etc/buildsys/btypes/: config_sysinstall.mk  config_syswide.mk  rules_sysinstall.mk  rules_syswide.mk
src/: Makefile
src/atwork_device_pb_msgs/: CMakeLists.txt  Makefile  atwork_device_pb_msgs.pc  package.xml
src/atwork_pb_msgs/: BenchmarkInfo.proto  CMakeLists.txt  ConveyorBelt.proto  Makefile  NavigationTask.proto  RobotInfo.proto  RobotStatusReport.proto  TaskInfo.proto  VersionInfo.proto  atwork_pb_msgs.pc  package.xml
src/rci_pb_msgs/: CMakeLists.txt  package.xml  rci_pb_msgs.pc  version.h
src/rcll_pb_msgs/: AttentionMessage.proto  BeaconSignal.proto  CMakeLists.txt  ExplorationInfo.proto  GameInfo.proto  GameState.proto  MachineCommands.proto  MachineInfo.proto  MachineInstructions.proto  MachineReport.proto  Makefile  OrderInfo.proto  Pose2D.proto  ProductColor.proto  RingInfo.proto  RobotCommands.proto  RobotInfo.proto  SimTimeSync.proto  Team.proto  Time.proto  VersionInfo.proto  Zone.proto  package.xml  rcll_pb_msgs.pc
