<?xml version="1.0"?>
<package>
  <name>rcll_pb_msgs</name>
  <version>0.0.1</version>
  <description>
    RoboCup Logistics League protobuf messages.
    These messages are used in the RoboCup Logistics League for communication with the
    RoboCup Industrial Referee Box.
  </description>

  <maintainer email="alexander.moriarty@brsu.de">Alexander Moriarty</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
